cicd/failfast-ci/manifests/ff-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: failfast-ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ffci
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ffci
    spec:
      containers:
      - command:
        - gunicorn
        - hub2labhook.api.wsgi:app
        - -b
        - :5000
        - --timeout
        - "121"
        - -w
        - "4"
        - --reload
        - -c
        - conf/gunicorn.py
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
          - name: failfast-config
            mountPath: /etc/failfast-ci
        image: quay.io/failfast-ci/failfast:v0.6.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /version
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 30
        name: failfast-ci
        ports:
        - containerPort: 5000
          name: failfast-ci
          protocol: TCP
      volumes:
        - name: failfast-config
          configMap:
            name: failfast-ci
