cicd/failfast-ci/manifests/ff-ci.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ffci
    app.kubernetes.io/part-of: failfast-ci
  name: failfast-ci
  namespace: failfast-ci
spec:
  ports:
  - name: failfast-ci
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app.kubernetes.io/name: ffci
  type: ClusterIP
